--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#00b300</color>
     <color name="colorPrimaryDark">#008000</color>
-    <color name="colorAccent">#ff3399</color>
+    <color name="colorAccent">#ffffff</color>
 
     <!-- Generic -->
     <color name="appBackgroundColor">#fffafafa</color>
