--- a/app/src/main/res/layout/fragment_createuser.xml
+++ b/app/src/main/res/layout/fragment_createuser.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/side_nav_bar"
+    android:background="@drawable/gradiant_primary_to_primary_dark"
     android:orientation="vertical">
     <TextView
         android:layout_width="match_parent"
