--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -70,7 +70,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="48dp">
+                android:paddingTop="48dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp">
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
@@ -87,7 +89,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="60dp"
                             android:background="@drawable/gradiant_primary_to_primary_dark"
-                            android:text="_Login"
+                            android:text="Login"
                             android:textColor="@color/white" />
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
@@ -99,26 +101,29 @@
                 android:paddingTop="40dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:clickable="true"
-                    android:paddingLeft="40dp"
-                    android:text="Password"
-                    android:textColor="@color/white"
-                    android:textSize="24dp" />
-                <View
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"/>
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    android:paddingLeft="32dp"
+                    android:text="GLEMT PASSWORD"
+                    android:textColor="@color/white"
+                    android:textSize="16dp"
+                    android:gravity="right"/>
+                <View
+                    android:layout_width="32dp"
+                    android:layout_height="wrap_content"/>
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:clickable="true"
-                    android:paddingRight="40dp"
-                    android:text="Registrer"
+                    android:paddingRight="32dp"
+                    android:text="OPRET BRUGER"
                     android:textColor="@color/white"
-                    android:textSize="24dp" />
+                    android:textSize="16dp"
+                    android:gravity="left"/>
 
             </LinearLayout>
         </LinearLayout>
