--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -27,14 +27,18 @@
             android:layout_alignParentTop="true"
             android:paddingTop="16dp"
             android:scaleType="fitXY"
-            android:src="@drawable/login_logo" />
+            android:src="@drawable/login_logo"
+            android:paddingRight="8dp"
+            android:paddingLeft="8dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/login_logo"
             android:orientation="vertical"
-            android:paddingTop="80dp">
+            android:paddingTop="80dp"
+            android:paddingRight="8dp"
+            android:paddingLeft="8dp">
 
 
             <android.support.design.widget.TextInputLayout
@@ -101,6 +105,7 @@
                 android:paddingTop="40dp">
 
                 <TextView
+                    android:id="@+id/login_forgot_password_tv"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -115,6 +120,7 @@
                     android:layout_height="wrap_content"/>
 
                 <TextView
+                    android:id="@+id/login_new_user_tv"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
