--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -20,6 +20,10 @@
             android:id="@+id/nav_news"
             android:icon="@drawable/ic_menu_manage"
             android:title="Nyheder" />
+        <item
+            android:id="@+id/nav_overview"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="Oversigt" />
     </group>
 
 </menu>
