--- a/app/src/main/res/layout/activity_commercial_detail.xml
+++ b/app/src/main/res/layout/activity_commercial_detail.xml
@@ -23,27 +23,31 @@
                 android:textStyle="bold"
                 android:textSize="32dp"/>
 
-            <ImageView
-                android:id="@+id/commercial_detail_picture"
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/commercial_detail_picture_pager"
                 android:layout_width="280dp"
                 android:layout_height="280dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_menu_camera" />
+                android:layout_gravity="center">
+            </android.support.v4.view.ViewPager>
+
+            <VideoView
+                android:id="@+id/commercial_detail_video"
+                android:layout_width="match_parent"
+                android:layout_height="280dp"
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/commercial_detail_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="_text"
-                android:textSize="16dp"/>
+                android:textSize="16dp"
+                android:gravity="center"
+                android:paddingTop="24dp"/>
 
 
         </LinearLayout>
     </ScrollView>
-    <android.support.v4.view.ViewPager
-        android:id="@+id/commercial_detail_picture_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-    </android.support.v4.view.ViewPager>
 </LinearLayout>
