--- a/app/src/main/res/layout/item_chat_name.xml
+++ b/app/src/main/res/layout/item_chat_name.xml
@@ -1,12 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/chat_name"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/newsItemBackgroundColor"/>
+        android:layout_height="64dp"
+        android:orientation="horizontal"
+        android:background="@color/newsItemBackgroundColor">
+
+        <ImageView
+            android:id="@+id/message_overview_logo"
+            android:layout_width="56dp"
+            android:layout_height="match_parent" />
+
+        <TextView
+            android:id="@+id/message_overview_name"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textColor="@color/black"/>
+
+        <TextView
+            android:id="@+id/message_overview_last_chat_msg"
+            android:layout_width="64dp"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
 
 </LinearLayout>
