--- a/app/src/main/res/layout/item_chat_name.xml
+++ b/app/src/main/res/layout/item_chat_name.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -7,25 +9,56 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="96dp"
-        android:orientation="horizontal"
-        android:background="@color/newsItemBackgroundColor">
+        android:background="@color/newsItemBackgroundColor"
+        android:padding="8dp"
+        android:orientation="horizontal">
 
+        <android.support.v7.widget.CardView
+            android:layout_width="96dp"
+            android:layout_height="match_parent"
+            card_view:cardCornerRadius="20dp">
         <ImageView
             android:id="@+id/message_overview_logo"
-            android:layout_width="80dp"
-            android:layout_height="match_parent" />
-
-        <TextView
-            android:id="@+id/message_overview_name"
-            android:layout_width="wrap_content"
+            android:layout_width="96dp"
             android:layout_height="match_parent"
-            android:textColor="@color/black"/>
+            tools:src="@color/blue" />
+        </android.support.v7.widget.CardView>
 
-        <TextView
-            android:id="@+id/message_overview_last_chat_msg"
-            android:layout_width="64dp"
-            android:layout_height="match_parent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/message_overview_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="24dp"
+                tools:text="Test  Testensen" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="8dp">
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    card_view:cardCornerRadius="20dp">
+
+                    <TextView
+                        android:id="@+id/message_overview_last_chat_msg"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="left"
+                        android:padding="8dp"
+                        android:maxLines="1"
+                        tools:text="test test test test" />
+                </android.support.v7.widget.CardView>
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
